--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   form_builder_validators: ^8.1.1
   google_sign_in: ^5.3.2
   passwordfield: ^0.1.0
+  provider: ^6.0.5
   badges: ^2.0.2
   shared_preferences: ^2.0.15
   http: ^0.13.4
